14.3/back.yml
---
apiVersion : apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend 
  template:
    metadata:
      labels:
        app: backend 
    spec:
      containers:
        - name: backend
          image: wbitt/network-multitool

---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
  - name: backend
    port: 80
    targetPort: 80
  selector:
    app: backend
