14.3/cache.yml
---
apiVersion : apps/v1
kind: Deployment
metadata:
  name: cache 
  labels:
    app: cache 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache 
  template:
    metadata:
      labels:
        app: cache 
    spec:
      containers:
        - name: cache
          image: wbitt/network-multitool

---
apiVersion: v1
kind: Service
metadata:
  name: cache
spec:
  ports:
  - name: cache
    port: 80
    targetPort: 80
  selector:
    app: cache
