14.3/front.yml
---
apiVersion : apps/v1
kind: Deployment
metadata:
  name: frontend 
  labels:
    app: frontend 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend 
  template:
    metadata:
      labels:
        app: frontend 
    spec:
      containers:
        - name: frontend
          image: wbitt/network-multitool

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
  - name: frontend
    port: 80
    targetPort: 80
  selector:
    app: frontend
